--- a/desafio08/consultorio.html
+++ b/desafio08/consultorio.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lista de espera</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <h1>Lista de Espera</h1>
+    <script src="consultorio.js"></script>
 </body>
 </html>
