--- a/aula10_funcoes/retorno.html
+++ b/aula10_funcoes/retorno.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recursos nativos Navegador</title>
+    <title>Retorno da função</title>
 </head>
 <body>
-    <h1>Recursos nativos Navegador</h1>
-
-    <script src="recursosNativos.js"></script>
+    <h1>Retorno de uma função</h1>
+    <script src="retorno.js"></script>
 </body>
 </html>
