continuando em JS Moderno

--- a/aula17_operadorSpread/spread.html
+++ b/aula17_operadorSpread/spread.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desestruturando Arrays</title>
+    <title>Operador Spread</title>
 </head>
 <body>
-    <h1>Desestruturando Arrays</h1>
-    <script src="desestruturando_arrays.js"></script>
+    <h1>Operador Spread</h1>
+    <script src="spread.js"></script>
 </body>
 </html>
