--- a/aula18_parametroRest/rest.html
+++ b/aula18_parametroRest/rest.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desestruturando Arrays</title>
+    <title>Parametro Rest</title>
 </head>
 <body>
-    <h1>Desestruturando Arrays</h1>
-    <script src="desestruturando_arrays.js"></script>
+    <h1>Parametro Rest</h1>
+    <script src="rest.js"></script>
 </body>
 </html>
