--- a/aula19_encadeamento/encadeamento.html
+++ b/aula19_encadeamento/encadeamento.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desestruturando Arrays</title>
+    <title>Encadeamento Opcional</title>
 </head>
 <body>
-    <h1>Desestruturando Arrays</h1>
-    <script src="desestruturando_arrays.js"></script>
+    <h1>Encadeamento Opcional</h1>
+    <script src="encadeamento.js"></script>
 </body>
 </html>
