--- a/aula20_operadorCoalescencia/coalescencia.html
+++ b/aula20_operadorCoalescencia/coalescencia.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desestruturando Arrays</title>
+    <title>Operador Coalescência</title>
 </head>
 <body>
-    <h1>Desestruturando Arrays</h1>
-    <script src="desestruturando_arrays.js"></script>
+    <h1>Operador Coalescência</h1>
+    <script src="coalescencia.js"></script>
 </body>
 </html>
