--- a/desafio14/exercicio14.html
+++ b/desafio14/exercicio14.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desestruturando Arrays</title>
+    <title>Desafio 14</title>
 </head>
 <body>
-    <h1>Desestruturando Arrays</h1>
-    <script src="desestruturando_arrays.js"></script>
+    <h1>Desafio 14</h1>
+    <script src="exercicio14.js"></script>
 </body>
 </html>
